# vitox

./: .gitignore  README.md  plan.md  pyproject.toml
.zed/: settings.json
docs/: model-and-pipeline.md
tests/: test_filter.py
vi_profanity_filter/: filter.py
vi_profanity_filter/api/: server.py
vi_profanity_filter/data/: vi_wordlist.txt
vi_profanity_filter/layers/: ml_layer.py  wordlist_layer.py
vi_profanity_filter/utils/: accent_restorer.py  normalizer.py  teencode.py
