[project]
name = "vi-profanity-filter"
version = "0.1.0"
description = "Vietnamese profanity filter with wordlist + PhoBERT ML layers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "better-profanity>=0.7.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "optimum[onnxruntime]>=1.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev"]
